# swivel

./: .gitignore  Cargo.toml  README.md
crates/swivelcli/: Cargo.toml
crates/swivelcli/src/: main.rs
crates/swivelcli/tests/: notion_cli_live_tests.rs
crates/swivelcore/: Cargo.toml
crates/swivelcore/src/: chunk.rs  lib.rs
crates/swivelnotion/: Cargo.toml
crates/swivelnotion/src/: client.rs  error.rs  lib.rs  normalize.rs  types.rs
crates/swiveltypes/: Cargo.toml
crates/swiveltypes/src/: lib.rs
python/swivelpy/: README.md  pyproject.toml
python/swivelpy/src/swivelpy/: __init__.py  client.py  errors.py  models.py
