[workspace]
members = [
  "crates/swivelcli",
  "crates/swivelcore",
  "crates/swiveltypes",
  "crates/swivelnotion",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
authors = ["Suhail"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }
