[package]
name = "swivelcli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "swivel"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
swivelcore = { path = "../swivelcore" }
swivelnotion = { path = "../swivelnotion" }
swiveltypes = { path = "../swiveltypes" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json.workspace = true
tempfile = "3"
