[package]
name = "swivelcli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for Swivel source retrieval"
repository = "https://github.com/clariform/swivel"

[[bin]]
name = "swivel"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
swivelcore = { path = "../swivelcore", version = "0.1.1" }
swivelnotion = { path = "../swivelnotion", version = "0.1.1" }
swiveltypes = { path = "../swiveltypes", version = "0.1.1" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json.workspace = true
tempfile = "3"
